<resources>
    <string name="app_name">Repository List</string>
    <string name="application_name">REPO LIST</string>
    <string name="application_description">Aplikasi android yang menampilkan list repository dari sebuah akun github</string>
    <string name="input_github_username">Input Github Username</string>
    <string name="username">username</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
    <string name="home_title">Home</string>
    <string name="description">Description</string>
    <string name="repo_fork">9999</string>
    <string name="programming_language">Kotlin</string>
    <string name="repo_image">Repository Image</string>
    <string name="view_on_github">View On Github</string>
</resources>