<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/repo_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/item_background"
            android:padding="10dp">

            <ImageView
                android:id="@+id/user_dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/backgroundColor"
                android:contentDescription="@string/repo_image"
                android:src="@drawable/ic_repo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/user_dp"
                android:layout_toRightOf="@+id/user_dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/repo_title_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/repo_description_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/repo_title_textView"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/description"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="normal" />

                <LinearLayout
                    android:id="@+id/repo_stats_layout"
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:layout_below="@+id/repo_description_textView"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/repo_watchers_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="4dp"
                        android:text="@string/repo_fork"
                        android:textSize="12sp"
                        app:drawableLeftCompat="@drawable/ic_repo_fork"
                        app:drawableStartCompat="@drawable/ic_repo_fork" />

                    <TextView
                        android:id="@+id/repo_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/programming_language"
                        android:textSize="12sp" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</layout>
