<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/application_name"
            android:textColor="@color/purple_500"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/application_description"
            android:textAlignment="center"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/et_input_username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tittle" />

        <EditText
            android:id="@+id/et_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:background="@drawable/round"
            android:drawableStart="@drawable/ic_github"
            android:drawableLeft="@drawable/ic_github"
            android:drawablePadding="16dp"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@id/btn_submit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/round"
            android:padding="8dp"
            android:text="@string/submit"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_input_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
