<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DetailActivity">

        <ImageView
            android:id="@+id/user_display_imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_repo"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/repo_image" />

        <TextView
            android:id="@+id/repo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_display_imageView"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:maxLines="2"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/repo_title"
            android:fadeScrollbars="true"
            android:padding="5dp"
            android:scrollbars="vertical">

            <LinearLayout
                android:id="@+id/details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/repo_full_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/description"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/repo_stars"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repo_fork"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        app:drawableTopCompat="@drawable/ic_repo_star" />

                    <TextView
                        android:id="@+id/repo_watchers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/repo_fork"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        app:drawableTopCompat="@drawable/ic_repo_viewer" />

                    <TextView
                        android:id="@+id/repo_forks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repo_fork"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        app:drawableTopCompat="@drawable/ic_repo_big_fork" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/item_background"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/repo_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/programming_language"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        app:drawableTopCompat="@drawable/ic_globe" />

                    <TextView
                        android:id="@+id/repo_open_issues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/repo_fork"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        app:drawableTopCompat="@drawable/ic_repo_issues" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/go_to_github"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round"
            android:text="@string/view_on_github"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>

</layout>
